# 2D-Fighter

./: .gitmodules  Cargo.toml  Char_1.png.import  KinematicBody2D.gd  Node2D.tscn  Player.gd  ProtoAnims.png.import  README.md  library.gdnlib  main.tscn  project.godot
.import/: Char_1.png-c814be1383edefda2681ec92e5112cda.md5  Char_1.png-c814be1383edefda2681ec92e5112cda.stex  ProtoAnims.png-272b2fbfd785e383aaec65f3bbef1d54.md5  ProtoAnims.png-272b2fbfd785e383aaec65f3bbef1d54.stex  godot-rust.svg-b9e4933c9b2a2eeacf42d84f74de397b.md5  godot-rust.svg-b9e4933c9b2a2eeacf42d84f74de397b.stex  red.png-13f6abb0e0c70056504666ed9c349d99.md5  red.png-13f6abb0e0c70056504666ed9c349d99.stex
src/: lib.rs
