[package]
name = "rust-godot"
version = "0.1.0"
authors = ["craig fay <craigfay1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = { path = "./gdnative_clone/gdnative" }

[lib]
# Since GDNative can only use C-compatible dynamic libraries, the crate type
#  has to be set accordingly
crate-type = ["cdylib"]